objects/box__BOSS_Exception__c/box__BOSS_Exception__c.object-meta.xml
<CustomObject>
    <label>BOSS Exception</label>
    <nameField>
        <displayFormat>BE-{00000}</displayFormat>
        <label>BOSS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOSS Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>