objects/box__BOSS_Exception__c/fields/box__Box_User__c.field-meta.xml
<CustomField>
    <fullName>box__Box_User__c</fullName>
    <label>Box User</label>
    <length>20</length>
    <type>Text</type>
</CustomField>