objects/box__BOSS_Exception__c/fields/box__Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>box__Folder_ID__c</fullName>
    <label>Folder ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>