objects/box__BOSS_Exception__c/fields/box__Latest_Err_Reason__c.field-meta.xml
<CustomField>
    <fullName>box__Latest_Err_Reason__c</fullName>
    <label>Latest Err Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>