objects/box__BOSS_Exception__c/fields/box__Lead_Dest_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>box__Lead_Dest_Folder_ID__c</fullName>
    <label>Lead Dest Folder ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>