objects/box__BOSS_Exception__c/fields/box__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>box__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>