objects/box__BOSS_Exception__c/fields/box__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>box__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>