objects/box__BOSS_Exception__c/fields/box__Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>box__Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This object should not be used to store things forever. The length should not be more than 1 (ideally). The only reason the length is 4 in this case is to accommodate a plan on how to delete/archive these records.</description>
    <label>Retry Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>